<resources>
    <string name="app_name">AeroTrackerApp</string>
    <string name="choose_option_main">choose the correct option to continue:</string>
    <string name="back_btn">BACK</string>
    <string name="name_athlete_registration_hint">Name</string>
    <string name="surname_athlete_registration_hint">Surname</string>
    <string name="age_athlete_registration_hint">Choose birth date</string>
    <string name="enter_password_athlete_registration_hint">Enter password</string>
    <string name="re_enter_password_athlete_registration_hint">Re-enter password</string>
    <string name="register_btn_text">REGISTER</string>
    <string name="log_in_reg_text">LOG IN</string>
    <string name="name_coach_registration_hint">Name</string>
    <string name="surname_coach_registration_hint">Surname</string>
    <string name="type_coach_registration_hint">Type of training</string>
    <string name="enter_password_coach_registration_hint">password</string>
    <string name="re_enter_password_coach_registration_hint">Re-password</string>
    <string name="log_in">LOG IN</string>
    <string name="training_day">TRAINING</string>
    <string name="enter_warm_up_start_time">Enter warm up start hour:</string>
    <string name="enter_warm_up_end_time">Enter warm up end hour:</string>
    <string name="Individual">Individual</string>
    <string name="Mixed_pair">Mixed pair</string>
    <string name="Trio">Trio</string>
    <string name="Group">Group</string>
    <string name="enter_main_part_start_time">Enter main part start hour:</string>
    <string name="enter_main_part_end_time">Enter main part end hour:</string>
    <string name="big_parts">BIG PARTS</string>
    <string name="eightcount">eight count</string>
    <string name="partnership">partnership</string>
    <string name="GplusTransition">G+ transition</string>
    <string name="element">element</string>
    <string name="sum_of_big_parts">Sum of big parts</string>
    <string name="small_parts">SMALL PARTS</string>
    <string name="sum_of_small_parts">Sum of small parts</string>
    <string name="efficiency">efficiency</string>
    <string name="intensity">intensity</string>
    <string name="done">DONE</string>
    <string name="add_preparatory_physical_preparation">Add preparatory physical preparation</string>
    <string name="add_precompetitive_physical_preparation">Add precompetitive physical preparation</string>
    <string name="add_competitive_physical_preparation">Add competitive physical preparation</string>
    <string name="add_postcompetitive_physical_preparation">Add postcompetitive physical preparation</string>
    <string name="add">ADD</string>
    <string name="finish_and_log_out">Finish and log out</string>
    <string name="warm_up">WARM UP:</string>
    <string name="choose_the_period_you_are_currently_in">Choose the period you are currently in:</string>
    <string name="precompetitive">precompetitive</string>
    <string name="competitive">competitive</string>
    <string name="postcompetitive">postcompetitive</string>
    <string name="preparatory">preparatory</string>
    <string name="choose_category">Choose category:</string>
    <string name="main_part">MAIN PART:</string>
    <string name="enter_the_big_parts_you_played">Enter the big parts you played:</string>
    <string name="enter_the_small_parts_you_played">Enter the small parts you played:</string>
    <string name="physical_preparation">Physical preparation</string>
    <string name="athlete_name">Athlete name</string>
    <string name="athlete_surname">Athlete surname</string>
    <string name="category">Category</string>
    <string name="show">Show</string>
</resources>