<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_two_pic"
    android:padding="10dp"
    tools:context="CoachRegistration">

    <Button
        android:id="@+id/button_back"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/back_btn" />

    <EditText
        android:id="@+id/nameCoachRegister"
        android:autofillHints="name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/name_coach_registration_hint"
        android:inputType="textPersonName"

        android:textSize="25sp" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/coachSurnameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameCoachRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/surname_coach_registration_hint"
        android:inputType="textPersonName"

        android:textSize="25sp" />

    <EditText
        android:autofillHints="type"
        android:id="@+id/coachTypeRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coachSurnameRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/type_coach_registration_hint"
        android:inputType="text"
        android:textSize="25sp" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/coachPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coachTypeRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_password_coach_registration_hint"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/coachRePasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coachPasswordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/re_enter_password_coach_registration_hint"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnRegisterCoach"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/coachRePasswordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        android:text="@string/register_btn_text"

        />

    <Button
        android:id="@+id/btnLogInCoach"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnRegisterCoach"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        android:text="@string/log_in_reg_text" />

</RelativeLayout>