<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_two_pic"
    android:padding="10dp"
    tools:context="AthleteRegistration">

    <Button
        android:id="@+id/button_back"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/back_btn" />


    <EditText
        android:id="@+id/nameAthleteRegister"
        android:autofillHints="name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/name_athlete_registration_hint"
        android:inputType="textPersonName"

        android:textSize="25sp" />
    <EditText
        android:autofillHints="name"
        android:id="@+id/athleteSurnameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameAthleteRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/surname_athlete_registration_hint"
        android:inputType="textPersonName"

        android:textSize="25sp" />

    <TextView
        android:autofillHints="age"
        android:id="@+id/athleteAgeRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/athleteSurnameRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/age_athlete_registration_hint"
        android:inputType="number"
        android:textSize="25sp" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/athletePasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/athleteAgeRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_password_athlete_registration_hint"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/athleteRePasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/athletePasswordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/re_enter_password_athlete_registration_hint"
        android:inputType="textPassword"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btnRegisterAthlete"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/athleteRePasswordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        android:text="@string/register_btn_text"

        />

    <Button
        android:id="@+id/btnLogInAthlete"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnRegisterAthlete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        android:text="@string/log_in_reg_text" />

</RelativeLayout>