<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightCyan"
    android:padding="10dp"
    tools:context=".AddPhysicalPreparation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_backToTrainingPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:text="@string/back_btn" />


            <EditText
                android:id="@+id/preparatoryPreparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:hint="@string/add_preparatory_physical_preparation"
                android:inputType="text"
                android:maxEms="15"

                android:textSize="20sp" />

            <EditText
                android:id="@+id/precompetitivePreparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:hint="@string/add_precompetitive_physical_preparation"
                android:inputType="text"
                android:maxEms="15"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/compeptitivePreparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:hint="@string/add_competitive_physical_preparation"
                android:inputType="text"
                android:maxEms="15"
                android:textSize="20sp" />

            <EditText

                android:id="@+id/postcompetitivePreparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:hint="@string/add_postcompetitive_physical_preparation"
                android:inputType="text"
                android:maxEms="15"
                android:textSize="20sp" />


            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="@android:dimen/app_icon_size"

                android:text="@string/add"/>
            <Button
                android:id="@+id/btnFinishTraining"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@android:dimen/app_icon_size"

                android:text="@string/finish_and_log_out"

                />
        </LinearLayout>
</ScrollView>