<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_two_pic"
    android:padding="10dp"
    tools:context=".LogInAthlete">


    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/back_btn" />

    <EditText
        android:id="@+id/nameAthleteLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/name_athlete_registration_hint"
        android:inputType="textPersonName"

        android:textSize="25sp" />

    <EditText
        android:id="@+id/surnameAthleteLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameAthleteLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="surname"
        android:ems="10"
        android:hint="@string/surname_athlete_registration_hint"
        android:inputType="textPersonName"

        android:textSize="25sp" />


    <EditText
        android:id="@+id/passwordAthleteLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surnameAthleteLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/enter_password_athlete_registration_hint"
        android:inputType="textPassword"


        android:textSize="25sp" />


    <Button
        android:id="@+id/btnAthleteLogIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/passwordAthleteLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/log_in" />


</RelativeLayout>